screen refactors & improvements